# Events

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: db.sqlite3
app/app/: asgi.py  settings.py  urls.py
app/chat/: api.py  consumers.py  middlewares.py  models.py  serializers.py  urls.py
app/chat/migrations/: 0001_initial.py  0002_initial.py
app/events/: admin.py  api.py  models.py  serializers.py  urls.py
app/events/migrations/: 0001_initial.py
app/organizations/: admin.py  api.py  models.py  serializers.py  urls.py
app/organizations/migrations/: 0001_initial.py  0002_alter_organization_title.py
app/users/: admin.py  api.py  managers.py  models.py  serializers.py  urls.py
app/users/migrations/: 0001_initial.py
